force-app/main/default/objects/Event_Question__c/Event_Question__c.object-meta.xml
<CustomObject>
    <label>Event Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>