force-app/main/default/objects/Event_Question__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <inlineHelpText>Write your picklist, each option in a single line</inlineHelpText>
    <label>Options</label>
    <type>TextArea</type>
</CustomField>