force-app/main/default/objects/Event_Question__c/fields/Type_of_Question__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Question__c</fullName>
    <label>Type of Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Text</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>